force-app/main/default/objects/ForeignExchangeTrade__c/ForeignExchangeTrade__c.object-meta.xml
<CustomObject>
    <description>Custom Object to store trade records</description>
    <label>Foreign Exchange Trade</label>
    <nameField>
        <displayFormat>TR{0000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foreign Exchange Trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>