force-app/main/default/objects/ForeignExchangeTrade__c/fields/DateBooked__c.field-meta.xml
<CustomField>
    <fullName>DateBooked__c</fullName>
    <defaultValue>DATETIMEVALUE(&quot;YEAR(date)-MONTH(date)-DAY(date) HOUR(expression):MINUTE(expression):SECOND(expression)&quot;)</defaultValue>
    <label>Date Booked</label>
    <type>DateTime</type>
</CustomField>