force-app/main/default/objects/ForeignExchangeTrade__c/fields/DateBookedFormula__c.field-meta.xml
<CustomField>
    <fullName>DateBookedFormula__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Booked</label>
    <type>DateTime</type>
</CustomField>