force-app/main/default/objects/ForeignExchangeTrade__c/fields/DomainURL__c.field-meta.xml
<CustomField>
    <fullName>DomainURL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain URL</label>
    <type>Text</type>
</CustomField>